# goms-2023-t3-pj-mapreducelite

./: .gitignore  Cargo.toml  build.rs  run.sh
proto/: mapreduce.proto
src/: lib.rs
src/Encode/: encode_decode.rs
src/S3/: minio.rs
src/app/: mrl-coordinator.rs  mrl-ctl.rs  mrl-worker.rs
src/cmd/: coordinator.rs  ctl.rs  worker.rs
src/standalone/: engine.rs  mod.rs
src/workload/: matrix_mult.rs  mod.rs
